...
              params: { game: Games.APPROXIMATION, multiplayer: 0 },
            })
          }
          text={t("games.approximation.title")}
        />
        <StyledButton
          testID="match_button"
          callback={() =>
            router.push({
              pathname: `/difficulty`,
              params: { game: Games.MATCH, multiplayer: 0 },
            })
          }
...
