...
              : difficulty == Difficulty.MEDIUM
              ? t("buttons.difficulties.medium")
              : t("buttons.difficulties.hard")
          }
        />
        <TouchableOpacity
          testID="start_game_button"
          style={{
            boxShadow: "4px 4px #0074d9",
          }}
          onPress={() =>
            router.push({
              pathname: `games/${params.game}` as any,
...
