appId: com.notaroomba.makinator
---
- launchApp

- waitForAnimationToEnd:
    timeout: 20000

- assertVisible:
    id: "settings_button"
    enabled: true

- tapOn:
    id: "settings_button"
- tapOn:
    id: "slider_button_0"
- tapOn:
    id: "back_button"
- evalScript: ${output.languages = ["en", "es", "zh", "fr", "de", "ru", "ja", "ko"]}
- evalScript: ${output.counter = 0}

- repeat:
    times: 8
    commands:
      - evalScript: ${output.language = output.languages[output.counter]}
      - evalScript: ${output.counter++}
      # Screenshot 1 - Home Page
      - takeScreenshot: "${output.language}_home"

      # Play Page
      - tapOn:
          id: "play_button"
      - takeScreenshot: "${output.language}_play"

      # Game Page
      - tapOn:
          id: "match_button"
      - tapOn:
          id: "start_game_button"
      - takeScreenshot: "${output.language}_game"

      # Reload app
      - stopApp
      - launchApp
      - waitForAnimationToEnd:
          timeout: 20000
      - assertVisible:
          id: "settings_button"
          enabled: true
      - tapOn:
          id: "settings_button"
          retryTapIfNoChange: false
      - swipe:
          from:
            id: "language_scrollview" # From (x, y) center of element
          direction: RIGHT
      - waitForAnimationToEnd:
          timeout: 500
      - tapOn:
          id: "back_button"
